--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
-<h1><%= @product.title %></h1>
+<h1 class='title'><%= @product.title %></h1>
 
-<p><%= @product.desciption %></p>
+<p class='desciption'><%= @product.desciption %></p>
 
-<span>$<%= @product.price %></span>
+<span class='price'>$<%= @product.price %></span>
